# photoserver

./: LICENSE  README.md  TODO  albums.py  auth.py  butterflies.py  dBug.py  db_create.py  dbutil.py  entities.py  exceptions.py  frames.py  framesets.py  images.py  models.py  photoserver.ini  photoserver.py  photoserver.wsgi  pyproject.toml  requirements.txt  security.py  thumb_generator.py  upload_photos.py  utils.py  wsgi.py
static/: skeleton
static/css/: autocomp.css
static/js/: autocomp.js  autocomp.min.js  smart_album_full.js
templates/: album_detail.html  album_images.html  album_list.html  album_smart_rules.html  frame_detail.html  frame_list.html  frameset_detail.html  frameset_frames.html  frameset_list.html  image_assign.html  image_detail.html  image_list.html  login_form.html  main.html  master.html  registration.html  upload.html  user_reg_form.html
tests/: conftest.py  test_album.py  test_frame.py  test_frameset.py  test_image.py
